2006-01-31  Peter Harvey  <peter.a.harvey@gmail.com>

	* lib/egg/egg-toolbars-model.c
	* lib/egg/egg-toolbars-model.h
	
	Added a useful function to remove all instances of 
	a named action from the toolbars.

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Post-release version bump.

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	=== Release 1.9.6 ===

	* NEWS:
	* configure.ac:
	* doc/reference/tmpl/ephy-embed.sgml:
	* doc/reference/tmpl/ephy-permission-manager.sgml:
	* doc/reference/tmpl/ephy-shell.sgml:
	* doc/reference/tmpl/epiphany-unused.sgml:

2006-01-31  Christian Persch  <chpe@cvs.gnome.org>

	* src/bookmarks/ephy-bookmark-properties.c: (show_duplicate_cb):

	Use ngettext here.

2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>

	* src/bookmarks/ephy-bookmark-properties.c
	* src/bookmarks/ephy-bookmarks.c
	* src/bookmarks/ephy-bookmarks.h
	
	Made the 'Similar' button show more bookmarks, and
	separate into 'identical' and 'similar'.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* lib/egg/egg-editable-toolbar.c: (configure_item_cursor),
	(egg_editable_toolbar_set_ui_manager):

	Don't double-ref the UI manager.
	Don't try to set a cursor on windowless widgets.

2006-01-30  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp: (GetErrorMessage):

	Remove unused var.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* lib/egg/egg-editable-toolbar.c:
	(egg_editable_toolbar_set_ui_manager):

	Fix the build with -Werror.

2006-01-30  Peter Harvey  <peter.a.harvey@gmail.com>

	* data/ui/epiphany-ui.xml
	* src/ephy-lockdown.c
	* src/ephy-toolbar.c
	* src/ephy-window.c
	* lib/egg/egg-editable-toolbar.c
	* lib/egg/egg-editable-toolbar.h
	
	Add a Toolbars submenu with per-toolbar hide/show items.

2006-01-30  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c: (open_urls), (call_dbus_proxy):

	Idle unref the dbus proxy in case we didn't call any remote