@@ -5,8 +5,8 @@
 			<arg type="s"/>
 			<arg type="u"/>
 		</method>
-		<method name="loadUrl">
-			<arg type="s"/>
+		<method name="loadUris">
+			<arg type="as"/>
 			<arg type="s"/>
 			<arg type="u"/>
 		</method>
