@@ -1,3 +1,13 @@
+2006-01-31  Christian Persch  <chpe@cvs.gnome.org>
+
+	* data/epiphany-service.xml:
+	* src/ephy-activation.c: (ephy_activation_load_uris):
+	* src/ephy-activation.h:
+	* src/ephy-main.c: (unref_proxy_reply_cb), (open_urls):
+
+	Change the DBUS interface to sending all the uris at one
+	as string array.
+
 2006-01-31  Peter Harvey  <peter.a.harvey@gmail.com>
 
 	* lib/egg/egg-toolbars-model.c
